# py_auto_SolveMe

./: configuration.py  db.py  notes.txt  pyproject.toml  pytest.ini  tables.py  tesssssst.py
src/base_class/: base_builder.py  base_enum.py  response.py
src/enums/: global_enums.py  user_enums.py
src/generators/: local_gen.py  user_gen.py
src/pydantic_schemas/: booking.py  computer.py  user.py
src/schemas/: booking.py
tests/: conftest.py  test_booking.py  test_gorest.py  test_pydantic.py  test_som.py
tests/booking/: test_booking.py
tests/users/: conftest.py  test_gorest.py  test_user_generator.py
