[tool.poetry]
name = "solveme"
version = "0.1.0"
description = ""
authors = ["Fuffes <Fuffes05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.0"
requests = "^2.31.0"
jsonschema = "^4.22.0"
pydantic = "^2.7.1"
allure-pytest = "^2.13.5"
faker = "^27.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
